--- a/BroadcastReceiverNewSms/app/src/main/res/layout/activity_broadcast_new_sms.xml
+++ b/BroadcastReceiverNewSms/app/src/main/res/layout/activity_broadcast_new_sms.xml
@@ -5,7 +5,28 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BroadcastNewSms">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <EditText
+        android:id="@+id/editText1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        android:hint=""
+        >
+
+        <requestFocus />
+    </EditText>
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_alignRight="@+id/editText1"
+
+        android:layout_marginTop="24dp"
+        android:text="Submit" />
+
 
 </RelativeLayout>
