--- a/BroadcastReceiverNewSms/app/src/main/res/layout/activity_broadcast_new_sms.xml
+++ b/BroadcastReceiverNewSms/app/src/main/res/layout/activity_broadcast_new_sms.xml
@@ -1,23 +1,24 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BroadcastNewSms">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BroadcastNewSms"
+    android:weightSum="1">
 
     <EditText
         android:id="@+id/editText1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="94dp"
 
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:ems="10"
-        android:hint=""
-        >
+        android:hint="">
 
         <requestFocus />
     </EditText>
+
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
@@ -28,5 +29,28 @@
         android:layout_marginTop="24dp"
         android:text="Submit" />
 
+    <!--- <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:weightSum="1">
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/infoip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+
+            <TextView
+                android:id="@+id/msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </ScrollView>
+
+    </LinearLayout>-->
+
+</LinearLayout>
+
