--- a/BroadcastReceiverNewSms/app/src/main/res/layout/activity_broadcast_new_sms.xml
+++ b/BroadcastReceiverNewSms/app/src/main/res/layout/activity_broadcast_new_sms.xml
@@ -1,4 +1,4 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_vertical_margin"
@@ -6,10 +6,25 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".BroadcastNewSms"
     android:weightSum="1">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:padding="10dp"
+        >
+
+    <TextView
+        android:id="@+id/infoip"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:text="Enter the url to connect"
+        />
+
     <EditText
         android:id="@+id/editText1"
-        android:layout_width="wrap_content"
-        android:layout_height="94dp"
+        android:layout_width="185dp"
+        android:layout_height="120dp"
 
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
@@ -24,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_alignRight="@+id/editText1"
+
 
         android:layout_marginTop="24dp"
         android:text="Submit" />
@@ -51,6 +66,6 @@
         </ScrollView>
 
     </LinearLayout>-->
-
 </LinearLayout>
+</RelativeLayout>
 
