--- a/NM/app/src/main/res/layout/info_window_layout.xml
+++ b/NM/app/src/main/res/layout/info_window_layout.xml
@@ -14,13 +14,21 @@
         android:text="Category:"
         android:layout_marginBottom="5dp"
         />
-
-    <!-- Spinner Element -->
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="wrap_content"
+    <TextView
+        android:id="@+id/text1"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:text="@string/str_btn" />
+        android:layout_marginTop="10dip"
+        android:text="Category:"
+        android:layout_marginBottom="5dp"
+        />
+    <TextView
+        android:id="@+id/text2"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:text="Category:"
+        android:layout_marginBottom="5dp"
+        />
+
 </LinearLayout>
