--- a/Servicejson/app/src/main/res/layout/content_final.xml
+++ b/Servicejson/app/src/main/res/layout/content_final.xml
@@ -7,7 +7,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main" tools:context=".MainActivity">
-
+    tools:showIn="@layout/activity_final" tools:context="com.example.arpit.servicejson.Final">
+    <ListView
+        android:id="@+id/mobile_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </RelativeLayout>
